--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,16 @@
   "extends": [
     "airbnb-base",
     "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
-    "plugin:prettier/recommended",
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "prettier/prettier": [
       "error",
       {
         "singleQuote": true,
-        "endOfLine": "auto",
-      },
-    ],
+        "endOfLine": "auto"
+      }
+    ]
   },
   "overrides": [
     // Configuration for TypeScript files
@@ -22,17 +22,17 @@
       "extends": [
         "airbnb-typescript",
         "next/core-web-vitals",
-        "plugin:prettier/recommended",
+        "plugin:prettier/recommended"
       ],
       "parserOptions": {
-        "project": "./tsconfig.json",
+        "project": "./tsconfig.json"
       },
       "rules": {
         "prettier/prettier": [
           "error",
           {
             "singleQuote": true,
-            "endOfLine": "auto",
+            "endOfLine": "auto"
           },
         ],
         "import/no-extraneous-dependencies": "off",
@@ -57,9 +57,9 @@
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
           "error",
-          { "argsIgnorePattern": "^_" },
-        ],
-      },
-    },
-  ],
+          { "argsIgnorePattern": "^_" }
+        ]
+      }
+    }
+  ]
 }
