--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   ],
   "rules": {
     "prettier/prettier": [
-      "error",
+      "warn",
       {
         "singleQuote": true,
         "endOfLine": "auto"
@@ -29,12 +29,13 @@
       },
       "rules": {
         "prettier/prettier": [
-          "error",
+          "warn",
           {
             "singleQuote": true,
             "endOfLine": "auto"
           },
         ],
+        "import/order": "warn",
         "import/no-extraneous-dependencies": "off",
         "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
         "react/require-default-props": "off", // Allow non-defined react props as undefined
@@ -43,7 +44,7 @@
         "@next/next/no-img-element": "off", // We currently not using next/image because it isn't supported with SSG mode
         "@next/next/link-passhref": "off", // Only needed when the child of Link wraps an <a> tag
         "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
-        "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
+        "@typescript-eslint/consistent-type-imports": "warn", // Ensure `import type` is used when it's necessary
         "no-restricted-syntax": [
           "error",
           "ForInStatement",
@@ -51,12 +52,12 @@
           "WithStatement",
         ], // Overrides Airbnb configuration and enable no-restricted-syntax
         "import/prefer-default-export": "off", // Named export is easier to refactor automatically
-        "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
-        "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
+        "simple-import-sort/imports": "off", // Import configuration for `eslint-plugin-simple-import-sort`
+        "simple-import-sort/exports": "off", // Export configuration for `eslint-plugin-simple-import-sort`
         "@typescript-eslint/no-unused-vars": "off",
-        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-imports": "warn",
         "unused-imports/no-unused-vars": [
-          "error",
+          "warn",
           { "argsIgnorePattern": "^_" }
         ]
       }
