modal almost complete

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lazarev-earn-app",
+  "name": "earn-app",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -23,6 +23,7 @@
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
