--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "viem": "^2.16.5",
+    "wagmi": "^2.10.8"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
