--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@augustdigital/types": "0.0.1-alpha",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@mui/x-data-grid": "^7.8.0",
     "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
