--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,16 @@
   "extends": [
     "airbnb-base",
     "next/core-web-vitals", // Needed to avoid warning in next.js build: 'The Next.js plugin was not detected in your ESLint configuration'
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
   ],
   "rules": {
     "prettier/prettier": [
       "warn",
       {
         "singleQuote": true,
-        "endOfLine": "auto"
-      }
-    ]
+        "endOfLine": "auto",
+      },
+    ],
   },
   "overrides": [
     // Configuration for TypeScript files
@@ -22,19 +22,20 @@
       "extends": [
         "airbnb-typescript",
         "next/core-web-vitals",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
       ],
       "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.json",
       },
       "rules": {
         "prettier/prettier": [
           "warn",
           {
             "singleQuote": true,
-            "endOfLine": "auto"
+            "endOfLine": "auto",
           },
         ],
+        "no-console": "off",
         "import/order": "warn",
         "import/no-extraneous-dependencies": "off",
         "react/destructuring-assignment": "off", // Vscode doesn't support automatically destructuring, it's a pain to add a new variable
@@ -58,9 +59,9 @@
         "unused-imports/no-unused-imports": "warn",
         "unused-imports/no-unused-vars": [
           "warn",
-          { "argsIgnorePattern": "^_" }
-        ]
-      }
-    }
-  ]
+          { "argsIgnorePattern": "^_" },
+        ],
+      },
+    },
+  ],
 }
