--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "viem": "^2.16.5",
     "wagmi": "^2.10.8"
