--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-data-grid": "^7.8.0",
     "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
+    "ledger": "link:wagmi/connectors/ledger",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "nextjs-progressbar": "^0.0.16",
@@ -62,5 +63,6 @@
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
