--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-data-grid": "^7.8.0",
     "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
+    "ethers": "^6.13.2",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "nextjs-progressbar": "^0.0.16",
