resolved env vars

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ NEXT_PUBLIC_URL=""
 NEXT_PUBLIC_INFURA_API_KEY=""
 NEXT_PUBLIC_AUGUST_DIGITAL_API_KEY=""
 # Google Sheet API
-NEXT_PUBLIC_GHEET_PK=""
+NEXT_PUBLIC_GSHEET_PK=""
 NEXT_PUBLIC_GHSHEET_SERVICER=""
-NEXT_PUBLIC_CONTACT_SPREADSHEET_ID=""
-NEXT_PUBLIC_CONTACT_SPREADSHEET_RANGE=""
+NEXT_PUBLIC_GSHEET_ID=""
+NEXT_PUBLIC_GSHEET_RANGE=""
