--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-data-grid": "^7.8.0",
     "@next/third-parties": "^14.2.11",
     "@tanstack/react-query": "^5.49.2",
+    "chart.js": "^4.4.5",
     "classnames": "^2.5.1",
     "ethers": "^6.13.2",
     "googleapis": "^144.0.0",
@@ -33,6 +34,7 @@
     "next-seo": "^6.6.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
