trying with new link

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
     "ethers": "^6.13.2",
-    "googleapis": "^144.0.0",
+    "google-auth-library": "^9.14.2",
+    "google-spreadsheet": "^4.1.4",
     "next": "^14.1.0",
     "next-seo": "^6.6.0",
     "nextjs-progressbar": "^0.0.16",
@@ -41,7 +42,6 @@
     "wagmi": "^2.10.8"
   },
   "devDependencies": {
-    "@netlify/edge-functions": "^2.11.0",
     "@next/bundle-analyzer": "^14.1.0",
     "@tanstack/react-query-devtools": "^5.54.1",
     "@types/node": "^20.11.10",
