--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_URL=""
 # API Keys
 NEXT_PUBLIC_INFURA_API_KEY=""
+NEXT_PUBLIC_ALCHEMY_API_KEY=""
 NEXT_PUBLIC_AUGUST_DIGITAL_API_KEY=""
 # Google Sheet API
 NEXT_PUBLIC_GSHEET_PK=""
