--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@augustdigital/sdk": "1.5.3-alpha",
+    "@augustdigital/sdk": "1.0.0-beta",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
