--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,8 @@
           },
         ],
         "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/lines-between-class-members": "off",
+        "@typescript-eslint/no-throw-literal": "off",
         "consistent-return": "warn",
         "no-nested-ternary": "warn",
         "no-console": "off",
