--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NEXT_PUBLIC_DEV=1 next dev",
     "dev:local": "NEXT_PUBLIC_NETWORK=localhost pnpm dev",
-    "dev:bypass": "NEXT_PUBLIC_REFERRALS_ENABLED=0 pnpm dev",
+    "dev:referral": "NEXT_PUBLIC_REFERRALS_ENABLED=1 pnpm dev",
     "build": "next build",
     "start": "next start",
     "build-prod": "run-s clean build",
