--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prepare": "husky install",
     "analyze": "ANALYZE=true next build",
     "link:sdk": "pnpm link ../js-sdk/packages/sdk",
-    "unlink:sdk": "pnpm unlink @augustdigital/sdk"
+    "unlink:sdk": "pnpm unlink @augustdigital/sdk",
+    "reset": "rm -rf node_modules pnpm-lock.yaml && pnpm i"
   },
   "dependencies": {
     "@augustdigital/sdk": "1.4.6",
