--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "analyze": "ANALYZE=true next build",
     "link:sdk": "pnpm link ../js-sdk/packages/sdk",
     "unlink:sdk": "pnpm unlink @augustdigital/sdk",
-    "reset": "rm -rf node_modules pnpm-lock.yaml && pnpm i"
+    "reset": "rm -rf node_modules pnpm-lock.yaml out .next && pnpm i"
   },
   "dependencies": {
-    "@augustdigital/sdk": "1.4.7",
+    "@augustdigital/sdk": "1.4.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.1.6",
