--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
             "endOfLine": "auto",
           },
         ],
+        "@typescript-eslint/no-unused-expressions": "warn",
         "@typescript-eslint/naming-convention": "off",
         "@typescript-eslint/lines-between-class-members": "off",
         "@typescript-eslint/no-throw-literal": "off",
