--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "NEXT_PUBLIC_DEV=1 next dev",
     "dev:local": "NEXT_PUBLIC_NETWORK=localhost pnpm dev",
     "dev:referral": "NEXT_PUBLIC_REFERRALS_ENABLED=true pnpm dev",
+    "dev:lombard": "NEXT_PUBLIC_INSTANCE=lombard pnpm dev",
+    "dev:avax": "NEXT_PUBLIC_INSTANCE=avax NEXT_PUBLIC_REFERRALS_ENABLED=true pnpm dev",
     "build": "next build",
     "start": "next start",
     "build-prod": "run-s clean build",
