--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:referral": "NEXT_PUBLIC_REFERRALS_ENABLED=true pnpm dev",
     "dev:lombard": "NEXT_PUBLIC_INSTANCE=lombard pnpm dev",
     "dev:treehouse": "NEXT_PUBLIC_INSTANCE=treehouse pnpm dev",
+    "dev:ethena": "NEXT_PUBLIC_INSTANCE=ethena pnpm dev",
     "dev:avax": "NEXT_PUBLIC_INSTANCE=avax NEXT_PUBLIC_REFERRALS_ENABLED=true pnpm dev",
     "build": "next build",
     "start": "next start",
@@ -25,7 +26,7 @@
     "reset": "rm -rf node_modules pnpm-lock.yaml out .next && pnpm i"
   },
   "dependencies": {
-    "@augustdigital/sdk": "1.5.7",
+    "@augustdigital/sdk": "1.5.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.1.6",
